--- a/src/views/contact.html
+++ b/src/views/contact.html
@@ -7,9 +7,6 @@
     <title><%= title %></title>
 </head>
 <body>
-    <h1>Hello World <%= 5 + 5 %></h1>
-    <script>
-        alert('works!')
-    </script>
+    <h1><%= title %></h1>
 </body>
 </html>
